crates/uitest/fixtures/ty_check/msg_selector_recursive_abi_type.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/msg_selector_recursive_abi_type.fe
---
error[3-0002]: recursive type definition
  ┌─ msg_selector_recursive_abi_type.fe:5:8
  │
5 │ struct Recursive {
  │        ^^^^^^^^^ recursive type definition here
6 │     next: Recursive,
  │           --------- recursion occurs here

error[3-0002]: recursive type definition
   ┌─ msg_selector_recursive_abi_type.fe:11:5
   │
 6 │     next: Recursive,
   │           --------- recursion occurs here
   ·
11 │     Direct { value: Recursive },
   │     ^^^^^^
   │     │
   │     recursive type definition here
   │     recursion occurs here

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `AbiSize`
    │
    ┌─ src/abi.fe:317:32
    │
317 │ pub fn dynamic_payload_size<T: AbiSize>(_ value: T) -> u256 {
    │                                ------- required by this bound on `dynamic_payload_size`

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `Encode<Sol>`
    │
    ┌─ src/abi.fe:437:14
    │
437 │     where T: Encode<A> + AbiSize, E: AbiEncoder<A>
    │              --------- required by this bound on `encode_field`

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `AbiSize`
    │
    ┌─ src/abi.fe:437:26
    │
437 │     where T: Encode<A> + AbiSize, E: AbiEncoder<A>
    │                          ------- required by this bound on `encode_field`

error[6-0003]: trait bound is not satisfied
   ┌─ msg_selector_recursive_abi_type.fe:11:5
   │
11 │     Direct { value: Recursive },
   │     ^^^^^^ `Recursive` doesn't implement `Encode<Sol>`

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `Decode<Sol>`
    │
    ┌─ src/abi.fe:340:14
    │
340 │     where T: Decode<A> + AbiSize,
    │              --------- required by this bound on `decode_field`

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `AbiSize`
    │
    ┌─ src/abi.fe:340:26
    │
340 │     where T: Decode<A> + AbiSize,
    │                          ------- required by this bound on `decode_field`

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `Decode<Sol>`
    │
    ┌─ src/abi.fe:374:14
    │
374 │     where T: Decode<A> + AbiSize,
    │              --------- required by this bound on `decode_msg_field_from`

error[6-0003]: trait bound is not satisfied
    ┌─ msg_selector_recursive_abi_type.fe:11:5
    │
 11 │     Direct { value: Recursive },
    │     ^^^^^^ `Recursive` doesn't implement `AbiSize`
    │
    ┌─ src/abi.fe:374:26
    │
374 │     where T: Decode<A> + AbiSize,
    │                          ------- required by this bound on `decode_msg_field_from`
